- Try to fix flex-wrap issue

--- a/src/main/webapp/static/app/styles/less/market.less
+++ b/src/main/webapp/static/app/styles/less/market.less
@@ -7,17 +7,19 @@
 }
 
 .flex-row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-content: stretch;
+  //display: flex;
+  //flex-direction: row;
+  //flex-wrap: wrap;
+  //justify-content: flex-start;
+  //align-content: stretch;
+  overflow: hidden;
 }
 
 .flex-column {
-  order: 0;
-  flex: 0 1 auto;
-  align-self: auto;
+  float: left;
+  //order: 0;
+  //flex: 0 1 auto;
+  //align-self: auto;
 }
 
 /*
